iniファイルを本番環境用に修正(非推奨)

--- a/dbConfig.ini
+++ b/dbConfig.ini
@@ -1,4 +1,4 @@
-host = localhost
-dbname = bbs_maekawa
-dbuser = root
-password = rootpass
+host = us-cdbr-iron-east-01.cleardb.net
+dbname = heroku_3460360f4db2604
+dbuser = b4e52eee71509f
+password = 620c6ec4
