localapache対応 http/s両方対応 接続DB切替対応

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "port": 9000,
             "pathMappings": {
-                "C:/inetpub/wwwroot": "C:/workspace/bbs/htdocs"
+                "C:/Apache24/htdocs": "C:/workspace/bbs/htdocs"
             }
         },
         {
